--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav>
             <div id="container">
               <ul class="navBar fechado">
-                <li class="palavra-hover"><a class="link" href="#Home" >Home</a></li>
-                <li class="palavra-hover"><a class="link" href="#Habilidades">Habilidades</a></li>
+                <li class="palavra-hover"><a class="link cor1" href="#Home" >Home</a></li>
+                <li class="palavra-hover"><a class="link cor1" href="#Habilidades">Habilidades</a></li>
                 <div class="logo"></div>
-                <li class="palavra-hover"><a class="link" href="#Projetos">Projetos</a></li>
-                <li class="palavra-hover"><a class="link" href="#idiomas">idiomas</a></li>
+                <li class="palavra-hover"><a class="link cor1" href="#Projetos">Projetos</a></li>
+                <li class="palavra-hover"><a class="link cor1" href="#idiomas">idiomas</a></li>
               </ul>
             </div>
             <div class="button-nav">
