--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a class="sitesC" href="https://github.com/CMarcosVi" target="_blank"><img class="contact" src="./imgs/icons8-github.svg" alt=""/></a>
           <a class="sitesC" href="https://www.linkedin.com/in/marcos-vin%C3%ADcius-259444229/" target="_blank"><img class="contact" src="./imgs/icons8-linkedin.svg" alt=""/></a>
           <button class="sobremim" onclick="mostrar()">sobre mim</button>
-          <div class="container-sobremim aberto" >
+          <div class="container-sobremim invisivel" >
             <div class="partSuperios ">
               <h1>Sobre mim</h1>
               <button class="buttonSuperior" onclick="mostrar()">x</button>
