--- a/index.html
+++ b/index.html
@@ -53,21 +53,29 @@
       <section class="partq2 mudar1 js-scroll" id="Habilidades">
         <h1 class="secoes">HABILIDADES</h1>
         <ul class="habilidade-list">
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-html.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-css.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-js.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-jquery.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-nativo-de-reagir.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-visualizar-js.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-restaurado.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-c.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-python.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-nó-js.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-figma.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-tela.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-windows-10.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/icons8-kali-linux.svg" alt=""></li>
-            <li class="imagse"><img class="imagse" src="./imgs/ubuntu-logo-svgrepo-com.svg" alt=""></li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-html.svg" alt="">HTML</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-css.svg" alt="">CSS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-atrevimento.svg" alt="">SASS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-bootstrap.svg" alt="">BOOTSTRAP</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-js.svg" alt="">JS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-texto-datilografado.svg" alt="">TS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-jquery.svg" alt="">JQUERY</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-nativo-de-reagir.svg" alt="">REACT</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-visualizar-js.svg" alt="">VUE</li>
+            <li class="imagse"><img class="imagse" src="./imgs/vuex-store.svg" alt="">VUEX</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-nuxt-jc.svg" alt="">NUXT.JS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-restaurado.svg" alt="">REDUX</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-nó-js.svg" alt="">NODE.JS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-logo-mysql.svg" alt="">SQL</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-php.svg" alt="">PHP</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-c.svg" alt="">C#</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-python.svg" alt="">PYTHON</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-figma.svg" alt="">FIGMA</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-tela.svg" alt="">CANVA</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-adobe-xd.svg">ADOBE XD</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-windows-10.svg" alt="">WINDOWS</li>
+            <li class="imagse"><img class="imagse" src="./imgs/icons8-kali-linux.svg" alt="">KALI LINUX</li>
+            <li class="imagse"><img class="imagse" src="./imgs/ubuntu-logo-svgrepo-com.svg" alt="">UBUNTO</li>
         </ul>
       </section>
       <!--Projetos-->
