--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <ul class="tecnologias-Project">
               <li class="imagse"><img class="imagse" src="./imgs/icons8-visualizar-js.svg" alt=""></li>
               <li class="imagse"><img class="imagse" src="./imgs/icons8-css.svg" alt=""></li> 
+              <li class="imagse"><img class="imagse" src="./imgs/icons8-atrevimento.svg" alt=""></li> 
             </ul>
           </div>
           <div class="project-click-carros js-scroll" onclick="mostrarInfoProjeto('Carros')">
