--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         </nav>
     </header>
     <main>
+      <!-----Mouse Icon Animation----->
+      <div id="mouseContainer">
+        <div class="mouse">
+          <div class="pointerMouse"></div>
+        </div>
+      </div>
+      <!-----Mouse Icon Animation----->
       <!-----Home----->
       <section id="Home" class="js-scroll">
         <h1 id="titleArea" class="js-scroll">Developer<br/> Front-End</h1>
@@ -90,11 +97,14 @@
         <h1 class="titleProjects js-scroll">PROJETOS</h1>
         <div class="projetcsList">
           <div id="projectBank" class="projectClickBank js-scroll" >
-            <h1 class="titleProjectsModify">Bank</h1>
+            <h1 class="titleProjectsModify">BCommerce</h1>
             <ul class="tecnologiasProject">
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li> 
-              <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li> 
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>  
+              <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>
             </ul>
           </div>
           <div id="projectCars" class="projectClickCarros js-scroll">
@@ -125,31 +135,48 @@
           </div>
         <div class="projectInfo" id="BankInfo">
           <div class="caixaBotaoFechar">
-            <h1 class="tituloBank">Bank</h1>
+            <h1 class="tituloBank">B-Commerce</h1>
               <button id="closedBank" class="botaoFecharBank">X</button>
           </div>
           
           <div class="separacao">
-            <a class="" href="https://github.com/CMarcosVi/Bank_banco_ficticio" target="_blank">
+            <div>
+              <a class="" href="https://github.com/CMarcosVi/Bank_banco_ficticio" target="_blank">
                 <div class="tablet" id="Bank">
-                    <div class="celular">
-                        <div class="superios" id="BankCell">
-                            <div class="autofalante"></div>
-                            <div class="camera"></div>
-                        </div>
-                    </div>
                 </div>
-            </a>
+              </a>
+            </div>
             <div class="especificacoes">
               <h1 class="especificacoesTitloBank">Especificações</h1>
               <ul class="tecnologiasInfoProjects">
-                <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
-                            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
+                <div>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-visualizar-js.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-texto-datilografado.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icon-pinia.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-atrevimento.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt=""></li>
+                </div>
+                <div>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px; width: 25px;" src="./assets/imgs/iconsTech/expressjs.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px; width: 25px;" src="./assets/imgs/iconsTech/knex.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px; width: 25px;" src="./assets/imgs/iconsTech/ENV.png" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px; width: 25px;" src="./assets/imgs/iconsTech/jsonwebtoken.svg" alt=""></li>
+                  <li class="imagse" style="height: 25px;"><img class="imagse" style="height: 25px;" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt=""></li>  
+                </div>
               </ul>
-              <p class="explicacoesProject">Bank é um projeto banco ficticio feito em Vue.js,Vue Router e CSS,
-                onde foram utilizadas de uma api de cambio,Vue Router foi utilizado para a criação de rotas
-                foram utilizadas funções do vue como diretivas como os data e methods,propriedades como os v-for e v-bind,componentes e routes, css foi tuilizado para personalização</p>
+              <div class="explicacoesProject">
+                <p>
+                  B-Commerce é uma loja de E-commerce ficticia da qual dentro contem diversos produtos em
+                  seu repertorio alem de ter parcerias e estar em escalada economica,este projeto foi feito
+                  em Arquitetura Vue.JS e Node.JS
+                </p>
+                </ul>
+              </div>
             </div>
+          </div>
+          <div class="btnLinkGithubProject">
+            <a class="linkProjectbtn" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
+            <a class="linkDocumentationtbtn" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce/blob/main/Documenta%C3%A7%C3%A3o%20B-Commerce.pdf" target="_blank">Documentação</a>
           </div>
         </div>
         <div class="projectInfo" id="CarrosInfo">
@@ -172,14 +199,20 @@
             <div class="especificacoes">
               <h1 class="especificacoesTitleCarros">Especificações</h1>
               <ul class="tecnologiasInfoProjects">
-                <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
-                <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
-                <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
+                <div>
+                  <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-html.svg" alt=""></li>
+                  <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
+                  <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
+                </div>
               </ul>
               <p class="explicacoesProject">Carros mais rapidos do mundo foi meu primeiro projeto enquanto estudava com o aprendizado em andamento
                 pelo curos da origamid de front-end onde no curso foi feito um projeto de animais porem modifiquei de acordo com oque desejava com 
                 intuito de aprendizado, tecnologias utilizadas foram HTML para a base,CSS para estilização e JavaScript para a animação. </p>
             </div>
+          </div>
+          <div class="btnsLinksProjects">
+            <a class="linkProjectcars" href="https://github.com/CMarcosVi/Carros_mais_rapidos_do_mundo" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
+            <a class="linkProjectcars" href="https://cmarcosvi.github.io/Carros_mais_rapidos_do_mundo/" target="_blank">Site</a>
           </div>
         </div>
         <div class="projectInfo" id="A-VInfo">
@@ -197,11 +230,14 @@
               <ul class="tecnologiasInfoProjects">
                 <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt=""></li>
               </ul>
-              <p class="explicacoesProject">este projeto foi feito em python e suas bibliotecas onde conta com 14 funcionalidades entre elas
+              <p class="explicacoesProject">Este projeto foi feito em python e suas bibliotecas onde conta com 14 funcionalidades entre elas
                 calculo de IMC,abri navegadores,verificação de moedas atraves de api,e nas suas futuras atualizações de codigos havera implementação de reconhecimento de voz
                 pesquisas por comando de voz,e geração de arquivos escritos atrtaves da fala. 
               </p>
             </div>
+          </div>
+          <div class="btnsLinksProjects">
+            <a class="linkProjectIa" href="https://github.com/CMarcosVi/Assistente_virtual" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
           </div>
         </div>
         <div class="projectInfo" id="projectBInfo">
@@ -223,12 +259,14 @@
             <div class="especificacoes">
               <h1 class="especificacoesTitleProjectB">Especificações</h1>
               <ul class="tecnologiasInfoProjects">
-                <li class="imagse" style="height: 18px;"><img class="imagse" style="height: 18px;" src="./assets/imgs/iconsTech/icons8-html.svg"></li>
-                <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
-                <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
-                <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-nativo-de-reagir.svg" alt=""></li>
-                <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt=""></li>  
-                <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-tela.svg" alt=""></li>
+                <div>
+                  <li class="imagse" style="height: 18px;"><img class="imagse" style="height: 18px;" src="./assets/imgs/iconsTech/icons8-html.svg"></li>
+                  <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-css.svg" alt=""></li>
+                  <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-js.svg" alt=""></li>
+                  <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-nativo-de-reagir.svg" alt=""></li>
+                  <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-restaurado.svg" alt=""></li>  
+                  <li class="imagse" style="height: 20px;"><img class="imagse" style="height: 20px;" src="./assets/imgs/iconsTech/icons8-tela.svg" alt=""></li>
+                </div>
               </ul>
               <p class="explicacoesProject">Project-P ou Born of Putridy é um jogo desenvolvido apenas por mim, o jogo esta atualmente na sua versão 0.45 Beta,
                 para mais informações sobre o jogo basta clicar na tela, neste projeto conta com 2 sites sendo um deles o institucional explicando sobre o jogo
@@ -236,6 +274,10 @@
                 utilizaçãode apis como cookies como inventario e vida, alem de utilizar o Canva para o desenvolvimento do estilo dos itens e logos
               </p>
             </div>
+          </div>
+          <div class="btnsLinksProjects">
+            <a class="linkProjectPp" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
+            <a class="linkProjectPp" href="https://cmarcosvi.github.io/Project-B/" target="_blank">Site</a>
           </div>
         </div>
       </section>
