--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-nó-js.svg" alt="">NODE.JS</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-postgresql.svg" alt="">PostgreSQL</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP<br/>(Aprendendo)</li>
-            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel<br/>(Aprendendo)</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
