--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-logo-mysql.svg" alt="">MySQL</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-php.svg" alt="">PHP</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/laravel.svg" alt="">Laravel</li>
+            <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/java-icon.svg" alt="">Java</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-c.svg" alt="">C#</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-python.svg" alt="">PYTHON</li>
             <li class="imagse"><img class="imagse" src="./assets/imgs/iconsTech/icons8-figma.svg" alt="">FIGMA</li>
