--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
           </div>
           <div class="btnsLinksProjects">
-            <a class="linkProjectPp" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
+            <a class="linkProjectPp" href="https://github.com/CMarcosVi/Born_of_Putrift-v0.47" target="_blank"><img src="/assets/imgs/iconsTech/icons8-github.svg" alt=""> Github</a>
             <a class="linkProjectPp" href="https://cmarcosvi.github.io/Project-B/" target="_blank">Site</a>
           </div>
         </div>
