--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           
           <div class="separacao">
             <div>
-              <a class="" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce" target="_blank">
+              <a id="BankDispositive">
                 <div class="tablet" id="Bank">
                 </div>
               </a>
@@ -180,6 +180,24 @@
             <a class="linkDocumentationtbtn" href="https://github.com/CMarcosVi/Project-fullstack-ecommerce/blob/main/Documenta%C3%A7%C3%A3o%20B-Commerce.pdf" target="_blank">Documentação</a>
           </div>
         </div>
+
+
+        <div id="imgsProjectsList">
+            <button id="btnCloseEcommerce">X</button>
+            <div class="imgBCProject">
+            <div>
+                <img src="./assets/imgs/fotosProjetos/alimentos-Bc.png" alt="">
+                <img src="./assets/imgs/fotosProjetos/bebidas-Bc.png" alt="">
+                <img src="./assets/imgs/fotosProjetos/Celulares-Bc.png" alt="">
+                <img src="./assets/imgs/fotosProjetos/consoles-Bc.png" alt="">
+            </div>
+              <img src="./assets/imgs/fotosProjetos/Create_account-Bc.png" alt="">
+              <img src="./assets/imgs/fotosProjetos/login-Bc.png" alt="">
+              <img src="./assets/imgs/fotosProjetos/recover-Bc.png" alt="">
+            </div>
+        </div>
+
+
         <div class="projectInfo" id="CarrosInfo">
           <div class="caixaBotaoFechar">
             <h1 id="tituloCarros">Carros Mais rapidos do mundo</h1>
