--- a/index.html
+++ b/index.html
@@ -3501,10 +3501,12 @@ ${msg}
         "vue.js": "./images/stacks/vueIcon.png",
         "php": "./images/stacks/phpIcon.png",
         "laravel": "./images/stacks/laravelIcon.png",
+        "Laravel": "./images/stacks/laravelIcon.png",
         "mysql": "./images/stacks/mysqlIcon.png",
         "sqlite": "./images/stacks/sqliteIcon.png",
         "git": "./images/stacks/gitIcon.png",
         "jquery": "./images/stacks/jqueryIcon.png",
+        "JQuery": "./images/stacks/jqueryIcon.png",
         "insomnia": "./images/stacks/insomniaIcon.png",
         "burp suite": "./images/stacks/burpsuiteIcon.png",
         "burpsuite": "./images/stacks/burpsuiteIcon.png",
@@ -3512,6 +3514,7 @@ ${msg}
         "nodejs": "./images/stacks/nodejs.png",
         "node": "./images/stacks/nodejs.png",
         "trello": "./images/stacks/TrelloIcon.png",
+        "Trello": "./images/stacks/TrelloIcon.png",
         "clickup": "./images/stacks/clickupIcon.png",
         "wordpress": "./images/stacks/wordpressIcon.png",
         "python": "./images/stacks/pythonIcon.png",
